refactoring crd module